houston-common-css/src/index.css
/* Copyright (C) 2022 Josh Boudreau <jboudreau@45drives.com>
 * 
 * This file is part of 45Drives NPM Repository.
 * 
 * 45Drives NPM Repository is free software: you can redistribute it and/or modify it under the terms
 * of the GNU General Public License as published by the Free Software Foundation, either version 3
 * of the License, or (at your option) any later version.
 * 
 * 45Drives NPM Repository is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along with 45Drives NPM Repository.
 * If not, see <https://www.gnu.org/licenses/>. 
 */

/* Requires `'tailwindcss/nesting': {},` in module.exports.plugins of postcss.config.js before tailwindcss */

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
	/* Specific colours
	 */
	/* Backgrounds */
	.bg-well {
		@apply bg-neutral-200 dark:bg-neutral-900;
	}

	.bg-default {
		@apply bg-white dark:bg-neutral-800;
		button&, a&, .btn&, &.interactive {
			@apply hover:bg-neutral-100 dark:hover:bg-[#222222];
		}
	}

	.bg-45d {
		@apply bg-red-700 dark:bg-red-800;
	}

	.bg-plugin-header {
		@apply bg-white dark:bg-neutral-800;
	}

	.bg-accent {
		@apply bg-neutral-100 dark:bg-[#333333];
	}

	.bg-primary {
		@apply bg-slate-600 dark:bg-slate-700;
		button&, a&, .btn&, &.interactive {
			@apply hover:bg-slate-700 dark:hover:bg-slate-800;
		}
	}

	.bg-secondary {
		@apply bg-slate-500 dark:bg-slate-600;
		button&, a&, .btn&, &.interactive {
			@apply hover:bg-slate-600 dark:hover:bg-slate-700;
		}
	}

	.bg-danger {
		@apply bg-rose-500 dark:bg-rose-700;
		button&, a&, .btn&, &.interactive {
			@apply hover:bg-rose-600 dark:hover:bg-rose-800;
		}
	}

	/* Divide and border */
	.divide-default {
		@apply divide-neutral-200 dark:divide-neutral-700;
	}

	.border-default {
		@apply border-neutral-200 dark:border-neutral-700;
	}

	/* Text and icons */
	.text-default {
		@apply text-gray-900 dark:text-gray-100;
	}

	.text-muted {
		@apply text-gray-500;
		.bg-accent &, &.bg-accent {
			@apply dark:text-gray-400;
		}
	}

	.text-45d {
		@apply text-red-800 dark:text-red-600;
	}

	.text-primary {
		@apply text-slate-600;
		button&, a&, .btn&, &.interactive {
			@apply hover:text-slate-700;
		}
	}

	.text-secondary {
		@apply text-slate-500;
		button&, a&, .btn&, &.interactive {
			@apply hover:text-slate-600;
		}
	}

	.text-danger {
		@apply text-rose-500 dark:text-rose-700;
		button&, a&, .btn&, &.interactive {
			@apply hover:text-rose-600 dark:hover:text-rose-800;
		}
	}

	.text-success {
		@apply text-green-600 dark:text-green-500;
		button&, a&, .btn&, &.interactive {
			@apply hover:text-green-700 dark:hover:text-green-600;
		}
	}

	.text-warning {
		@apply text-orange-500;
		button&, a&, .btn&, &.interactive {
			@apply hover:text-orange-600;
		}
	}

	.text-error {
		@apply text-red-800 dark:text-red-600;
		button&, a&, .btn&, &.interactive {
			@apply hover:text-red-900 dark:hover:text-red-700;
		}
	}

	.text-link {
		@apply text-[#274f87] dark:text-[#3d69a6] hover:underline;
	}

	.icon-default {
		@apply text-gray-500;
		button > &, a > &, .btn&, &.interactive {
			@apply hover:text-gray-600;
		}
		button:disabled > & {
			@apply text-neutral-400 dark:text-neutral-600 cursor-no-drop;
		}
	}

	.icon-45d {
		@apply text-red-600;
		button > &, a > &, .btn&, &.interactive {
			@apply hover:text-red-800;
		}
		button:disabled > & {
			@apply text-neutral-400 dark:text-neutral-600 cursor-no-drop;
		}
	}

	.icon-primary {
		@apply text-slate-600 dark:text-slate-700;
		button > &, a > &, .btn&, &.interactive {
			@apply hover:text-slate-700 dark:hover:text-slate-800;
		}
		button:disabled > & {
			@apply text-neutral-400 dark:text-neutral-600 cursor-no-drop;
		}
	}

	.icon-secondary {
		@apply text-slate-500 dark:text-slate-600;
		button > &, a > &, .btn&, &.interactive {
			@apply hover:text-slate-600 dark:hover:text-slate-700;
		}
		button:disabled > & {
			@apply text-neutral-400 dark:text-neutral-600 cursor-no-drop;
		}
	}

	.icon-danger {
		@apply text-red-600;
		button > &, a > &, .btn&, &.interactive {
			@apply hover:text-red-800;
		}
		button:disabled > & {
			@apply text-neutral-400 dark:text-neutral-600 cursor-no-drop;
		}
	}

	.icon-success {
		@apply text-green-500;
	}

	.icon-warning {
		@apply text-yellow-400;
	}

	.icon-error {
		@apply text-red-600;
	}

	.icon-info {
		@apply text-blue-500;
	}

	/* Specific spacing
	 */
	/* Wells */
	.gap-well {
		@apply gap-4;
	}

	.space-x-well {
		@apply space-x-4;
	}

	.space-y-well {
		@apply space-y-4;
	}

	.space-well {
		@apply space-x-well space-y-well;
	}

	.p-well {
		@apply p-2 sm:p-8;
	}

	/* Content, e.g. stuff in cards */
	.gap-content {
		@apply gap-4;
	}

	.space-x-content {
		@apply space-x-4;
	}

	.space-y-content {
		@apply space-y-4;
	}

	.space-content {
		@apply space-x-content space-y-content;
	}

	/* Button spacing */
	.space-x-buttons {
		@apply space-x-3;
	}

	.space-y-buttons {
		@apply space-y-3;
	}

	.space-buttons {
		@apply space-x-buttons space-y-buttons;
	}

	.gap-buttons {
		@apply gap-3;
	}

	/* Specific sizing
	 */
	/* Icons */
	.size-icon {
		@apply h-5 w-auto;
	}

	.size-icon-sm {
		@apply h-4 w-auto;
	}

	.size-icon-lg {
		@apply h-7 w-auto;
	}

	.size-icon-xl {
		@apply h-8 w-auto;
	}

	/* Text (text size and font weight) */
	.text-header {
		@apply text-lg font-semibold;
	}

	.text-label {
		@apply text-sm font-semibold mb-1;
	}

	.text-feedback {
		@apply text-sm;
	}

	/* Button styling
	 */
	.btn {
		@apply box-border py-2 px-4 font-medium rounded-lg shadow-md focus:outline-none focus:ring-0;
	}

	.btn-primary {
		@apply text-gray-50 bg-primary;
	}

	.btn-secondary {
		@apply text-gray-50 bg-secondary;
	}

	.btn-danger {
		@apply text-gray-50 bg-danger;
	}

	.btn:disabled {
		@apply bg-neutral-400 hover:bg-neutral-400 dark:bg-neutral-700 dark:hover:bg-neutral-700 text-neutral-300 dark:text-neutral-500 cursor-not-allowed;
	}

	/* Input styling
	 */
	.input-textlike {
		@apply shadow-sm border-default bg-default rounded-md sm:text-sm focus:ring-0 focus:outline-none focus:border-neutral-300 dark:focus:border-neutral-600;
		&:disabled {
			@apply bg-neutral-200 dark:bg-[#333333] text-neutral-400 dark:text-neutral-600 cursor-not-allowed;
		}
	}

	.input-checkbox {
		@apply bg-default checked:bg-45d text-45d focus:ring-0 focus:outline-none h-4 w-4 border-neutral-500 rounded;
	}

	/* Combination classes
	 */
	.card {
		@apply bg-default md:shadow-lg shadow-md divide-y divide-default;
	}

	.card-header {
		@apply px-4 py-2 sm:px-6 sm:py-5;
	}

	.card-body {
		@apply px-4 py-5 sm:px-6;
	}

	.card-footer {
		@apply px-4 py-2 sm:px-6 sm:py-5;
	}

	.card-parent-col {
		@apply max-w-7xl mx-auto sm:px-6 lg:px-8 space-y-4 py-8;
	}

	.well {
		@apply p-well gap-well bg-well;
	}

	.centered-column {
		@apply max-w-7xl mx-auto;
	}

	.button-group-row {
		@apply flex flex-row space-x-buttons;
	}

	.button-group-col {
		@apply flex flex-col space-y-buttons;
	}

	.button-group-row-wrap {
		@apply flex flex-row flex-wrap gap-buttons;
	}

	.button-group-col-wrap {
		@apply flex flex-col flex-wrap gap-buttons;
	}

	.inline-button-group-row {
		@apply inline-flex flex-row space-x-buttons;
	}

	.inline-button-group-col {
		@apply inline-flex flex-col space-y-buttons;
	}

	.inline-button-group-row-wrap {
		@apply inline-flex flex-row flex-wrap gap-buttons;
	}

	.inline-button-group-col-wrap {
		@apply inline-flex flex-col flex-wrap gap-buttons;
	}

	.feedback-group {
		@apply mt-2 flex flex-row justify-start items-center space-x-1;
	}
}

